[package]
name = "minase-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.190"
serde_derive = "1.0.190"
rmp-serde = "1.1.2"
minase = { path = "../minase" }

